--- a/src/html/index.njk
+++ b/src/html/index.njk
@@ -1,7 +1,7 @@
 {% extends 'layouts/master.njk' %}
 
 {% block content %}
-  <main vocab="https://schema.org" typeof="Festival">
+  <main>
     <section>
       <header>
         <h2>Novinky</h2>
