Generate latest news from data

--- a/src/html/index.njk
+++ b/src/html/index.njk
@@ -13,6 +13,14 @@
       <header>
         <h2>Novinky</h2>
       </header>
+      {% for post in news %}
+      <article>
+        <time datetime="{{ post.time }}">{{ formatDate(post.time) }}</time>
+        {% markdown %}
+        {{ post.text.replace("#vidimesevlese", "").replace("#18vlese", "") }}
+        {% endmarkdown %}
+      </article>
+      {% endfor %}
     </section>
     <section>
       <header>
