--- a/src/stylesheets/index.scss
+++ b/src/stylesheets/index.scss
@@ -80,6 +80,7 @@ h2 {
 }
 
 hr {
+  margin: 2em 0 1em;
   height: 6px;
   border: 0;
   background-image: var(--hr-border-image);
@@ -158,6 +159,7 @@ section p {
     margin-top: 0;
   }
   p {
+    font-size: revert;
     text-align: left;
     max-width: revert;
     margin: revert;
