--- a/src/stylesheets/index.scss
+++ b/src/stylesheets/index.scss
@@ -101,8 +101,8 @@ body > header {
     height: 74px;
     width: 166px;
     display: flex;
+    gap: 0.5em;
     line-height: 1;
-    text-align: center;
     align-items: center;
     font-size: 1.5em;
   }
