--- a/src/stylesheets/index.scss
+++ b/src/stylesheets/index.scss
@@ -204,8 +204,13 @@ section p {
 
 .news-list {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(2, 1fr);
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(4, 1fr);
+  @media screen and (min-width: 481px) {
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+  }
+  grid-auto-flow: dense;
   gap: 1em;
 
   article {
@@ -247,10 +252,8 @@ section p {
   }
 
   article:first-of-type {
-    grid-column-start: 1;
-    grid-column-end: 3;
-    grid-row-start: 1;
-    grid-row-end: 3;
+    grid-column: span 2;
+    grid-row: span 2;
   }
 }
 
