--- a/src/html/index.njk
+++ b/src/html/index.njk
@@ -43,6 +43,45 @@
           href="https://goout.net">GoOut.net</a>. V&nbsp;ceně vstupenky je i&nbsp;stanové
         městečko. Parkovací stání se platí zvlášť.</p>
 
+      <div class="tickets__list">
+        <div class="tickets__item tickets__item--disabled">
+          <h3>1-denní</h3>
+          <p>1. vlna vstupenek</p>
+          <p>340 Kč</p>
+          <a href="" class="button">Vyprodáno</a>
+        </div>
+        <div class="tickets__item tickets__item--disabled">
+          <h3>2-denní</h3>
+          <p>1. vlna vstupenek</p>
+          <p>540 Kč</p>
+          <a href="" class="button">Vyprodáno</a>
+        </div>
+        <div class="tickets__item tickets__item--disabled">
+          <h3>1-denní</h3>
+          <p>2. vlna vstupenek</p>
+          <p>440 Kč</p>
+          <a href="" class="button">Vyprodáno</a>
+        </div>
+        <div class="tickets__item tickets__item--disabled">
+          <h3>2-denní</h3>
+          <p>2. vlna vstupenek</p>
+          <p>640 Kč</p>
+          <a href="" class="button">Vyprodáno</a>
+        </div>
+        <div class="tickets__item">
+          <h3>1-denní</h3>
+          <p>3. vlna vstupenek</p>
+          <p>540 Kč</p>
+          <a href="" class="button">Koupit</a>
+        </div>
+        <div class="tickets__item">
+          <h3>2-denní</h3>
+          <p>3. vlna vstupenek</p>
+          <p>740 Kč</p>
+          <a href="" class="button">Koupit</a>
+        </div>
+      </div>
+
     </section>
     <section>
       <header>
