--- a/src/stylesheets/index.scss
+++ b/src/stylesheets/index.scss
@@ -257,6 +257,76 @@ section p {
   }
 }
 
+.tickets__list {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(9.2em, 1fr));
+  gap: 1em;
+
+  .tickets__item {
+    --text-color: #000;
+    --background-color: #fff;
+
+    position: relative;
+    text-align: center;
+    text-transform: uppercase;
+    background-color: var(--accent-color);
+    padding: 1em;
+
+    &::before {
+      content: "";
+      position: absolute;
+      width: 30px;
+      height: 30px;
+      border-radius: 50%;
+      background-color: var(--background-color);
+      left: -15px;
+      top: calc(50% - 15px);
+    }
+
+    &::after {
+      content: "";
+      position: absolute;
+      width: 30px;
+      height: 30px;
+      border-radius: 50%;
+      background-color: var(--background-color);
+      right: -15px;
+      top: calc(50% - 15px);
+    }
+
+    &--disabled {
+      filter: saturate(0);
+
+      a.button {
+        pointer-events: none;
+      }
+    }
+
+    h3, p {
+      margin: 0;
+    }
+
+    p {
+      font-size: initial;
+    }
+
+    p + p {
+      font-size: larger;
+      font-weight: bold;
+      line-height: 2;
+    }
+
+    .button {
+      background-color: var(--text-color);
+      color: var(--background-color);
+      display: block;
+      text-decoration: none;
+      font-weight: bold;
+      line-height: 2;
+    }
+  }
+}
+
 .footer__contacts {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(14em, 1fr));
