--- a/src/html/index.njk
+++ b/src/html/index.njk
@@ -78,8 +78,13 @@
           <h3>2-denní</h3>
           <p>3. vlna vstupenek</p>
           <p>740 Kč</p>
-          <a href="" class="button">Koupit</a>
+          <a href="https://goout.net/cs/listky/studnice-fest-2024/ayit/" class="button">Koupit</a>
         </div>
+      </div>
+
+      <div class="tickets__free">
+        <h3>Vstup zdarma</h3>
+        <p>Děti do 150cm, obyvatelé Studnice  a ZTP</p>
       </div>
 
     </section>
@@ -95,9 +100,4 @@
 {% endblock %}
 
 {% block javascript %}
-<script type="module">
-  import {helloWorld} from "{{ 'index.js' | assetUrl('esm') }}";
-
-  helloWorld();
-</script>
 {% endblock %}
