--- a/src/stylesheets/index.scss
+++ b/src/stylesheets/index.scss
@@ -193,7 +193,7 @@ section p {
   text-wrap: pretty;
   font-size: 1.125em;
   max-width: 34em;
-  margin: 0.5em auto;
+  margin: 0.5em auto 1em;
 }
 
 .smap {
@@ -265,8 +265,6 @@ section p {
 
   .tickets__item {
     --text-color: #000;
-    --background-color: #fff;
-
     position: relative;
     text-align: center;
     text-transform: uppercase;
@@ -300,11 +298,13 @@ section p {
 
       a.button {
         pointer-events: none;
+        opacity: 0.3;
       }
     }
 
     h3, p {
       margin: 0;
+      color: var(--text-color);
     }
 
     p {
@@ -318,6 +318,7 @@ section p {
     }
 
     .button {
+      --background-color: #fff;
       background-color: var(--text-color);
       color: var(--background-color);
       display: block;
@@ -335,7 +336,21 @@ section p {
   h3 {
     font-size: 1.75em;
     margin: 0;
-    background: assetUrl("images", "heading-bg.svg") no-repeat center;
+    position: relative;
+
+    &::before {
+      content: "";
+      position: absolute;
+      z-index: -1;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background: assetUrl("images", "heading-bg.svg") no-repeat center;
+      @media (prefers-color-scheme: dark) {
+        opacity: 0.6;
+      }
+    }
   }
   p {
     text-transform: uppercase;
