--- a/src/html/index.njk
+++ b/src/html/index.njk
@@ -32,16 +32,17 @@
     </section>
     <section>
       <header>
-        <h2>Kapely</h2>
+        <h2>Vystoupí</h2>
       </header>
       <div>
         {% for key in event.artists %}
           {% set artist = artists[key] %}
+          {% set image = images["artists/" + artist.image]["public_id"] %}
           <article>
-            <a href="/kapely/#{{ key }}">
-              <img src="{{ artist.image }}" alt="{{ artist.title }}">
-            </a>
             <h3>{{ artist.title }}</h3>
+            <a href="/kapely/{{ key }}">
+              <img src="{{ image | cloudinaryUrl() }}" alt="{{ artist.title }}">
+            </a>
           </article>
         {% endfor %}
       </div>
@@ -58,38 +59,38 @@
       <div class="tickets__list">
         <div class="tickets__item tickets__item--disabled">
           <h3>1-denní</h3>
-          <p>1. vlna vstupenek</p>
-          <p>340 Kč</p>
+          <p>1.&nbsp;vlna vstupenek</p>
+          <p>390&nbsp;Kč</p>
           <a href="" class="button">Vyprodáno</a>
         </div>
         <div class="tickets__item tickets__item--disabled">
           <h3>2-denní</h3>
-          <p>1. vlna vstupenek</p>
-          <p>540 Kč</p>
+          <p>1.&nbsp;vlna vstupenek</p>
+          <p>540&nbsp;Kč</p>
           <a href="" class="button">Vyprodáno</a>
         </div>
         <div class="tickets__item tickets__item--disabled">
           <h3>1-denní</h3>
-          <p>2. vlna vstupenek</p>
-          <p>440 Kč</p>
+          <p>2.&nbsp;vlna vstupenek</p>
+          <p>490&nbsp;Kč</p>
           <a href="" class="button">Vyprodáno</a>
         </div>
         <div class="tickets__item tickets__item--disabled">
           <h3>2-denní</h3>
-          <p>2. vlna vstupenek</p>
-          <p>640 Kč</p>
+          <p>2.&nbsp;vlna vstupenek</p>
+          <p>640&nbsp;Kč</p>
           <a href="" class="button">Vyprodáno</a>
         </div>
         <div class="tickets__item">
           <h3>1-denní</h3>
-          <p>3. vlna vstupenek</p>
-          <p>540 Kč</p>
+          <p>3.&nbsp;vlna vstupenek</p>
+          <p>590&nbsp;Kč</p>
           <a href="" class="button">Koupit</a>
         </div>
         <div class="tickets__item">
           <h3>2-denní</h3>
-          <p>3. vlna vstupenek</p>
-          <p>740 Kč</p>
+          <p>3.&nbsp;vlna vstupenek</p>
+          <p>740&nbsp;Kč</p>
           <a href="https://goout.net/cs/listky/studnice-fest-2024/ayit/" class="button">Koupit</a>
         </div>
       </div>
@@ -98,14 +99,13 @@
         <h3>Vstup zdarma</h3>
         <p>Děti do 150cm, obyvatelé Studnice a ZTP</p>
       </div>
-
     </section>
     <section>
       <header>
         <h2>Časový harmonogram</h2>
       </header>
       <p>Hudební produkce bude probíhat na třech jevištích&nbsp;&ndash; hlavní stage,
-        stage “Na Vyhlídce ” a dětský&nbsp;stan.</p>
+        stage “Na Vyhlídce” a dětský&nbsp;stan.</p>
       <div>
         <div>
           <h3>Pátek 26. 7.</h3>
