--- a/src/html/layouts/master.njk
+++ b/src/html/layouts/master.njk
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <title>{% block title %}{{ title }}{% endblock %}</title>
   <link rel="stylesheet" href="{{ 'index.css' | assetUrl('stylesheets') }}">
+  <meta http-equiv="delegate-ch" content="sec-ch-width https://res.cloudinary.com; sec-ch-dpr https://res.cloudinary.com; sec-ch-viewport-width https://res.cloudinary.com;">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="manifest" href="{{ 'manifest.json' | assetUrl('static') }}">
   {% include "shared/app-icons.html" %}
