Optimize custom font loading

--- a/src/html/layouts/master.njk
+++ b/src/html/layouts/master.njk
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="{{ 'index.css' | assetUrl('stylesheets') }}">
   <meta http-equiv="delegate-ch" content="sec-ch-width https://res.cloudinary.com; sec-ch-dpr https://res.cloudinary.com; sec-ch-viewport-width https://res.cloudinary.com;">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  {% include "shared/styles.njk" %}
   <link rel="manifest" href="{{ 'manifest.json' | assetUrl('static') }}">
   {% include "shared/app-icons.html" %}
   {% block head %}{% endblock %}
