--- a/src/html/shared/styles.njk
+++ b/src/html/shared/styles.njk
@@ -1,4 +1,6 @@
 <link rel="preload" href="{{ "barrio-regular.latin.woff2" | assetUrl("fonts") }}" as="font" crossorigin>
+<link rel="preload" href="{{ "border-top.svg" | assetUrl("images") }}" as="image">
+<link rel="preload" href="{{ "border-bottom.svg" | assetUrl("images") }}" as="image">
 <style>
   @font-face {
     font-family: Barrio;
