Load uhtml from unpkg

--- a/src/html/layouts/master.njk
+++ b/src/html/layouts/master.njk
@@ -180,7 +180,7 @@
 <script src="https://unpkg.com/leaflet@1.9.2/dist/leaflet.js"
         integrity="sha256-o9N1jGDZrf5tS+Ft4gbIK7mYMipq9lqpVJ91xHSyKhg=" crossorigin></script>
 <script type="module">
-  import { html } from "https://cdn.jsdelivr.net/npm/uhtml/node.js";
+  import { html } from "https://unpkg.com/uhtml@4.5.9/node.js";
 
   const API_KEY = "S9n6dfE_8AfjsNvRxSwAmFV4-1z5tfk5W7IUajp2D3I";
   const map = L.map("map", {
