--- a/src/html/layouts/master.njk
+++ b/src/html/layouts/master.njk
@@ -9,9 +9,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   {% include "shared/styles.njk" %}
   <link rel="preconnect" href="https://res.cloudinary.com">
+  <link rel="preconnect" href="https://www.googletagmanager.com">
   <link rel="preconnect" href="https://unpkg.com">
   <link rel="preconnect" href="https://api.mapy.cz">
-  <link rel="preconnect" href="https://www.googletagmanager.com">
   <link rel="manifest" href="{{ 'manifest.json' | assetUrl('static') }}">
   {% include "shared/app-icons.html" %}
   {% block head %}{% endblock %}
@@ -176,7 +176,7 @@
 {% block javascript %}
 {% endblock %}
 <script src="https://unpkg.com/leaflet@1.9.2/dist/leaflet.js"
-        integrity="sha256-o9N1jGDZrf5tS+Ft4gbIK7mYMipq9lqpVJ91xHSyKhg=" crossorigin defer></script>
+        integrity="sha256-o9N1jGDZrf5tS+Ft4gbIK7mYMipq9lqpVJ91xHSyKhg=" crossorigin async></script>
 <script type="module">
   import { html } from "https://unpkg.com/uhtml@4.5.9/node.js";
 
